ajout des balise de base

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 
 <body>
-    <h1>Ohmyfood</h1>
-    <p>site pour Ohmyfood</p>
+    <header>
+        <h1>Ohmyfood</h1>
+    </header>
+    <main>
+        <p>site pour Ohmyfood</p>
+    </main>
+    <footer></footer>
+
 </body>
 
 </html>
