rajout un logo pour la page accueil

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <header>
+        <img src="img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food">
         <h1>Ohmyfood</h1>
     </header>
     <main>
