debut de installation du header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
     <header>
         <img src="img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food">
-        <h1>Ohmyfood</h1>
+        <div class="miheader">
+            <p>paris , belleville</p>
+        </div>
+        <div class="baheader">
+            <h1>Réservez le menu qui <br />vous convient</h1>
+            <p>Découvrez des restaurants d'exception,<br />
+                séléctionnés par nos soins.</p>
+            <div>
+                <h2>explorer nos restaurants</h2>
+            </div>
+        </div>
     </header>
     <main>
         <p>site pour Ohmyfood</p>
