--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8">
+
+    <meta charset="UTF-8">
+
+    <link href="public/css/style.css" rel="stylesheet">
     <title>Ohmyfood</title>
 
 </head>
