mise en place et bouton du header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Réservez le menu qui <br />vous convient</h1>
             <p>Découvrez des restaurants d'exception,<br />
                 séléctionnés par nos soins.</p>
-            <div>
+            <div class="btn-header">
                 <h2>explorer nos restaurants</h2>
             </div>
         </div>
