--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="fr">
 
 <head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--[if IE]>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <![endif]-->
+    <!--pour voir les raison de sait 3 ligne https://www.alsacreations.com/astuce/lire/1437-comment-interdire-le-mode-de-compatibilite-sur-ie.html-->
     <meta charset="UTF-8">
-
-    <link href="public/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="public/css/style.css" type="text/css">
     <title>Ohmyfood</title>
+    <script src="https://kit.fontawesome.com/3261bc58c2.js" crossorigin="anonymous"></script>
+    <!--apelle de la bibliotheque Font Awesome.-->
+
+
+
 
 </head>
 
