mise en place du hautde la page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         </div>
     </header>
     <main>
-        <p>site pour Ohmyfood</p>
+        <div class="fonctionnement">
+            <h1>Fonctionnement</h1>
+        </div>
+        <div>
+            <h1>Restaurants</h1>
+        </div>
+
     </main>
     <footer></footer>
 
