reglage grandeur body et reglage bouton et quelque rajout de .scss

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="fonctionnement">
             <h1>Fonctionnement</h1>
         </div>
-        <div>
+        <div class="restaurants">
             <h1>Restaurants</h1>
         </div>
 
