--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
         </div>
 
     </main>
-    <footer></footer>
+    <footer>
+        <h1>ohmyfood</h1>
+        <p>Proposer un restaurant</p>
+        <p>Devenir partenaire</p>
+        <p>Mentions légales</p>
+        <p>Contact</p>
+    </footer>
 
 </body>
 
