--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <img src="img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food">
         <div class="miheader">
-            <p>paris , belleville</p>
+            <p><i class="fas fa-map-marker-alt"></i> paris , belleville</p>
         </div>
         <div class="baheader">
             <h1>Réservez le menu qui <br />vous convient</h1>
@@ -44,8 +44,8 @@
     </main>
     <footer>
         <h1>ohmyfood</h1>
-        <p>Proposer un restaurant</p>
-        <p>Devenir partenaire</p>
+        <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
+        <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
         <p>Mentions légales</p>
         <p>Contact</p>
     </footer>
