--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
         <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <p><a href="mailto:Contact@ohmyfood.com">Contact</a></p>
     </footer>
 
 </body>
