reglage icones emplacement

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <body>
     <header>
-        <img src="img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food">
+        <div class="logo"><img src="img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food"></div>
         <div class="miheader">
-            <p><i class="fas fa-map-marker-alt"></i> paris , belleville</p>
+            <p><i class="fas fa-map-marker-alt"></i> Paris , Belleville</p>
         </div>
         <div class="baheader">
             <h1>Réservez le menu qui <br />vous convient</h1>
