--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food"></div>
+        <div class="logo"><img src="/img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food"></div>
         <div class="miheader">
             <p><i class="fas fa-map-marker-alt"></i> Paris , Belleville</p>
         </div>
