changement pour la balise title

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -9,7 +9,7 @@
     <!--pour voir les raison de sait 3 ligne https://www.alsacreations.com/astuce/lire/1437-comment-interdire-le-mode-de-compatibilite-sur-ie.html-->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/public/css/style.css" type="text/css">
-    <title>Ohmyfood</title>
+    <title>La palette du goût</title>
     <script src="https://kit.fontawesome.com/3261bc58c2.js" crossorigin="anonymous"></script>
     <!--apelle de la bibliotheque Font Awesome.-->
 
