modification sur les bouton rose

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -28,9 +28,7 @@
             <h1>Réservez le menu qui <br />vous convient</h1>
             <p>Découvrez des restaurants d'exception,<br />
                 séléctionnés par nos soins.</p>
-            <div class="btn-header">
-                <h2>explorer nos restaurants</h2>
-            </div>
+
         </div>
     </header>
     <main>
@@ -40,11 +38,13 @@
         <div class="restaurants">
             <h1>Restaurants</h1>
         </div>
-
+        <div class="btn-commander">
+            <h2>Commander/h2>
+        </div>
     </main>
     <footer>
         <h1>ohmyfood</h1>
-        <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
+        <p><i class=" fas fa-utensils"></i> Proposer un restaurant</p>
         <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
         <p>Mentions légales</p>
         <p><a href="mailto:Contact@ohmyfood.com">Contact</a></p>
