degrade  sur .miheader grace a box shadow et rajout  de class btn-Fonctionnement dans index.html

--- a/index.html
+++ b/index.html
@@ -34,9 +34,19 @@
         </div>
     </header>
     <main>
-        <div class="fonctionnement">
+        <div>
             <h1>Fonctionnement</h1>
         </div>
+        <div class="btn-Fonctionnement">
+            <p>Choisissez un restaurant</p>
+        </div>
+        <div class="btn-Fonctionnement">
+            <p>Composez votre menu</p>
+        </div>
+        <div class="btn-Fonctionnement">
+            <p>Dégustez au restaurant</p>
+        </div>
+
         <div class="restaurants">
             <h1>Restaurants</h1>
         </div>
