--- a/index.html
+++ b/index.html
@@ -34,20 +34,24 @@
         </div>
     </header>
     <main>
-        <div>
+        <div class="fonctionnement">.
             <h1>Fonctionnement</h1>
-        </div>
-        <div class="btn-Fonctionnement">
-            <p>Choisissez un restaurant</p>
-        </div>
-        <div class="btn-Fonctionnement">
-            <p>Composez votre menu</p>
-        </div>
-        <div class="btn-Fonctionnement">
-            <p>Dégustez au restaurant</p>
+
+
+            <div class="btn__Fonctionnement btn__Fonctionnement-color">
+                <p>Choisissez un restaurant</p>
+            </div>
+
+            <div class="btn__Fonctionnement btn__Fonctionnement-color ">
+                <p>Composez votre menu</p>
+            </div>
+
+            <div class=" btn__Fonctionnement btn__Fonctionnement-color2 ">
+                <p>Dégustez au restaurant</p>
+            </div>
         </div>
 
-        <div class="restaurants">
+        <div class=" restaurants">
             <h1>Restaurants</h1>
         </div>
 
