supression de plusieur @import et rectification de couleur etc...

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>Ohmyfood</title>
     <script src="https://kit.fontawesome.com/3261bc58c2.js" crossorigin="anonymous"></script>
     <!--apelle de la bibliotheque Font Awesome.-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+    <!--appelle pour m'es 2 polices-->
 
 
 
@@ -38,15 +41,15 @@
             <h1>Fonctionnement</h1>
 
 
-            <div class="btn__Fonctionnement btn__Fonctionnement-color">
+            <div class="Fonctionnement__btn Fonctionnement__btn-color">
                 <p>Choisissez un restaurant</p>
             </div>
 
-            <div class="btn__Fonctionnement btn__Fonctionnement-color ">
+            <div class="Fonctionnement__btn Fonctionnement__btn-color ">
                 <p>Composez votre menu</p>
             </div>
 
-            <div class=" btn__Fonctionnement btn__Fonctionnement-color2 ">
+            <div class=" Fonctionnement__btn Fonctionnement__btn-color2 ">
                 <p>Dégustez au restaurant</p>
             </div>
         </div>
