--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 <body>
     <header>
         <div class="logo"><img src="img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food"></div>
-        <div class="miheader">
+        <div class="header__milieu">
             <p><i class="fas fa-map-marker-alt"></i> Paris , Belleville</p>
         </div>
-        <div class="baheader">
+        <div class="header__bas">
             <h1>Réservez le menu qui <br />vous convient</h1>
             <p>Découvrez des restaurants d'exception,<br />
                 séléctionnés par nos soins.</p>
-            <div class="btn-header ">
+            <div class="header__btn ">
                 <h2>explorer nos restaurants</h2>
             </div>
         </div>
