modificcation dans le header pour resepecter BEM et metre en place le fichier @import

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Réservez le menu qui <br />vous convient</h1>
             <p>Découvrez des restaurants d'exception,<br />
                 séléctionnés par nos soins.</p>
-            <div class="header__btn ">
+            <div class="header__bas__btn ">
                 <h2>explorer nos restaurants</h2>
             </div>
         </div>
