--- a/index.html
+++ b/index.html
@@ -42,15 +42,38 @@
 
 
             <div class="Fonctionnement__btn Fonctionnement__btn-color">
-                <p>Choisissez un restaurant</p>
+                <div>
+                    <p>1</p>
+                </div>
+                <div><i class="fas fa-mobile-alt"></i></div>
+                <div>
+                    <p>Choisissez un restaurant</p>
+                </div>
+
+
             </div>
 
             <div class="Fonctionnement__btn Fonctionnement__btn-color ">
-                <p>Composez votre menu</p>
+                <div>
+                    <p>2</p>
+                </div>
+                <div><i class="fas fa-list-ul"></i></div>
+                <div>
+                    <p> Composez votre menu</p>
+                </div>
+
+
             </div>
 
             <div class=" Fonctionnement__btn Fonctionnement__btn-color2 ">
-                <p>Dégustez au restaurant</p>
+                <div>
+                    <p>3</p>
+                </div>
+                <div><i class="fas fa-store"></i></div>
+                <div>
+                    <p>Dégustez au restaurant</p>
+                </div>
+
             </div>
         </div>
 
