changement dans  le css et html au nouveau fonction

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="Fonctionnement__btn Fonctionnement__btn-color">
                 <div>
-                    <p>1</p>
+                    <p class="Fonctionnement__btn_chiffre fonctionnement__btn-placement">1</p>
                 </div>
                 <div><i class="fas fa-mobile-alt"></i></div>
                 <div>
@@ -55,7 +55,7 @@
 
             <div class="Fonctionnement__btn Fonctionnement__btn-color ">
                 <div>
-                    <p>2</p>
+                    <p class="Fonctionnement__btn_chiffre fonctionnement__btn-placement">2</p>
                 </div>
                 <div><i class="fas fa-list-ul"></i></div>
                 <div>
@@ -67,7 +67,7 @@
 
             <div class=" Fonctionnement__btn Fonctionnement__btn-color2 ">
                 <div>
-                    <p>3</p>
+                    <p class="Fonctionnement__btn_chiffre fonctionnement__btn-placement">3</p>
                 </div>
                 <div><i class="fas fa-store"></i></div>
                 <div>
