--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div>
                     <p class="Fonctionnement__btn_chiffre fonctionnement__btn-placement">2</p>
                 </div>
-                <div><i class="fas fa-list-ul"></i></div>
+                <div><i class="tartenpion fas fa-list-ul"></i></div>
                 <div>
                     <p> Composez votre menu</p>
                 </div>
