premier reglage de restaurant__carrd et de sont css

--- a/index.html
+++ b/index.html
@@ -79,7 +79,56 @@
 
         <div class=" restaurants">
             <h1>Restaurants</h1>
+            <div class="restaurants__card">
+                <div><img src="img/restaurants/la_palette_du_gout.jpg" alt="assiette du restaurant la palette du goût"
+                        title="restaurant la palette du goût a Ménilmontant"></div>
+                <div class="restaurants__bas">
+                    <div class="restaurants__bas__gauche">
+                        <h2>La palette du goût</h2>
+                        <p>Ménilmontant</p>
+                    </div>
+                    <div class="restaurants__bas__coeur">
+                        <p><i class="far fa-heart"></i></p>
+                    </div>
+
+
+                </div>
+
+            </div>
+            <div class="restaurants__card">
+                <div></div>
+                <div class="restaurants__bas">
+                    <div class="restaurants__bas__gauche"></div>
+                    <div class="restaurants__bas__coeur"></div>
+
+
+                </div>
+
+            </div>
+            <div class="restaurants__card">
+                <div></div>
+                <div class="restaurants__bas">
+                    <div class="restaurants__bas__gauche"></div>
+                    <div class="restaurants__bas__coeur"></div>
+
+
+                </div>
+
+            </div>
+            <div class="restaurants__card">
+                <div></div>
+                <div class="restaurants__bas">
+                    <div class="restaurants__bas__gauche"></div>
+                    <div class="restaurants__bas__coeur"></div>
+
+
+                </div>
+
+            </div>
+
         </div>
+
+
 
     </main>
     <footer>
