--- a/index.html
+++ b/index.html
@@ -81,8 +81,13 @@
             <h1>Restaurants</h1>
             <div class="restaurants__card">
                 <div><img src="img/restaurants/la_palette_du_gout.jpg" alt="assiette du restaurant la palette du goût"
-                        title="restaurant la palette du goût a Ménilmontant"></div>
+                        title="restaurant la palette du goût a Ménilmontant">
+                    <div class="nouveau">
+                        <p>Nouveau</p>
+                    </div>
+                </div>
                 <div class="restaurants__bas">
+
                     <div class="restaurants__bas__gauche">
                         <h2>La palette du goût</h2>
                         <p>Ménilmontant</p>
@@ -96,30 +101,63 @@
 
             </div>
             <div class="restaurants__card">
-                <div></div>
+                <div><img src="img/restaurants/la_note_enchantee.jpg" alt="assiette du restaurant la note enchantée"
+                        title="restaurant la note enchantée a Charonne">
+                    <div class="nouveau">
+                        <p>Nouveau</p>
+                    </div>
+                </div>
                 <div class="restaurants__bas">
-                    <div class="restaurants__bas__gauche"></div>
-                    <div class="restaurants__bas__coeur"></div>
+
+                    <div class="restaurants__bas__gauche">
+                        <h2>La note enchantée</h2>
+                        <p>Charonne</p>
+                    </div>
+                    <div class="restaurants__bas__coeur">
+                        <p><i class="far fa-heart"></i></p>
+                    </div>
 
 
                 </div>
 
             </div>
             <div class="restaurants__card">
-                <div></div>
+                <div><img src="img/restaurants/a_la_francaise.jpg" alt="assiette du restaurant À la francaise"
+                        title="restaurant à la française">
+                    <div class="nouveau">
+                        <p>Nouveau</p>
+                    </div>
+                </div>
                 <div class="restaurants__bas">
-                    <div class="restaurants__bas__gauche"></div>
-                    <div class="restaurants__bas__coeur"></div>
+
+                    <div class="restaurants__bas__gauche">
+                        <h2>À la française</h2>
+                        <p>Cité Rouge</p>
+                    </div>
+                    <div class="restaurants__bas__coeur">
+                        <p><i class="far fa-heart"></i></p>
+                    </div>
 
 
                 </div>
 
             </div>
             <div class="restaurants__card">
-                <div></div>
+                <div><img src="img/restaurants/le_delice_des_sens.jpg" alt="assiette du restaurant le délice des sens"
+                        title="restaurant le délice des sens">
+                    <div class="nouveau">
+                        <p>Nouveau</p>
+                    </div>
+                </div>
                 <div class="restaurants__bas">
-                    <div class="restaurants__bas__gauche"></div>
-                    <div class="restaurants__bas__coeur"></div>
+
+                    <div class="restaurants__bas__gauche">
+                        <h2>Le délice des sens</h2>
+                        <p>Folie-Méricourt</p>
+                    </div>
+                    <div class="restaurants__bas__coeur">
+                        <p><i class="far fa-heart"></i></p>
+                    </div>
 
 
                 </div>
