travaille sur les image de restaurant

--- a/index.html
+++ b/index.html
@@ -80,12 +80,15 @@
         <div class=" restaurants">
             <h1>Restaurants</h1>
             <div class="restaurants__card">
-                <div><img src="img/restaurants/la_palette_du_gout.jpg" alt="assiette du restaurant la palette du goût"
-                        title="restaurant la palette du goût a Ménilmontant">
+                <div class="restaurants__card__image">
+                    <div><img src="img/restaurants/la_palette_du_gout.jpg"
+                            alt="assiette du restaurant la palette du goût"
+                            title="restaurant la palette du goût a Ménilmontant"></div>
                     <div class="nouveau">
                         <p>Nouveau</p>
                     </div>
                 </div>
+
                 <div class="restaurants__bas">
 
                     <div class="restaurants__bas__gauche">
@@ -124,9 +127,7 @@
             <div class="restaurants__card">
                 <div><img src="img/restaurants/a_la_francaise.jpg" alt="assiette du restaurant À la francaise"
                         title="restaurant à la française">
-                    <div class="nouveau">
-                        <p>Nouveau</p>
-                    </div>
+
                 </div>
                 <div class="restaurants__bas">
 
@@ -145,9 +146,7 @@
             <div class="restaurants__card">
                 <div><img src="img/restaurants/le_delice_des_sens.jpg" alt="assiette du restaurant le délice des sens"
                         title="restaurant le délice des sens">
-                    <div class="nouveau">
-                        <p>Nouveau</p>
-                    </div>
+
                 </div>
                 <div class="restaurants__bas">
 
