congement sur les card restaurant

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
                 <div class="restaurants__card__image">
                     <div><img src="img/restaurants/la_palette_du_gout.jpg"
                             alt="assiette du restaurant la palette du goût"
-                            title="restaurant la palette du goût a Ménilmontant"></div>
+                            title="restaurant la palette du goût a Ménilmontant">
+                        <div class="nouveau">
+                            <p>Nouveau</p>
+                        </div>
+                    </div>
                     <div class="nouveau">
                         <p>Nouveau</p>
                     </div>
@@ -93,7 +97,7 @@
 
                     <div class="restaurants__bas__gauche">
                         <h2>La palette du goût</h2>
-                        <p>Ménilmontant</p>
+                        <p>Ménilmontan</p>
                     </div>
                     <div class="restaurants__bas__coeur">
                         <p><i class="far fa-heart"></i></p>
@@ -106,9 +110,6 @@
             <div class="restaurants__card">
                 <div><img src="img/restaurants/la_note_enchantee.jpg" alt="assiette du restaurant la note enchantée"
                         title="restaurant la note enchantée a Charonne">
-                    <div class="nouveau">
-                        <p>Nouveau</p>
-                    </div>
                 </div>
                 <div class="restaurants__bas">
 
