arrengement du placement du mots nouvent dans restaurant

--- a/index.html
+++ b/index.html
@@ -79,17 +79,20 @@
 
         <div class=" restaurants">
             <h1>Restaurants</h1>
+
+
             <div class="restaurants__card">
                 <div class="restaurants__card__image">
                     <div><img src="img/restaurants/la_palette_du_gout.jpg"
                             alt="assiette du restaurant la palette du goût"
                             title="restaurant la palette du goût a Ménilmontant">
-                        <div class="nouveau">
-                            <p>Nouveau</p>
-                        </div>
+
                     </div>
-                    <div class="nouveau">
-                        <p>Nouveau</p>
+                    <div class="restaurants__card__nouveau">
+                        <div class="restaurants__card__nouveau__texte">
+                            <p>Nouveau</p>
+                            <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
+                        </div>
                     </div>
                 </div>
 
@@ -107,6 +110,13 @@
                 </div>
 
             </div>
+
+
+
+
+
+
+
             <div class="restaurants__card">
                 <div><img src="img/restaurants/la_note_enchantee.jpg" alt="assiette du restaurant la note enchantée"
                         title="restaurant la note enchantée a Charonne">
