--- a/index.html
+++ b/index.html
@@ -110,22 +110,25 @@
                 </div>
 
             </div>
-
-
-
-
-
-
-
             <div class="restaurants__card">
-                <div><img src="img/restaurants/la_note_enchantee.jpg" alt="assiette du restaurant la note enchantée"
-                        title="restaurant la note enchantée a Charonne">
+                <div class="restaurants__card__image">
+                    <div><img src="img/restaurants/la_note_enchantee.jpg" alt="assiette du restaurant la note enchanté"
+                            title="restaurant la note enchantée">
+
+                    </div>
+                    <div class="restaurants__card__nouveau">
+                        <div class="restaurants__card__nouveau__texte">
+                            <p>Nouveau</p>
+                            <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
+                        </div>
+                    </div>
                 </div>
+
                 <div class="restaurants__bas">
 
                     <div class="restaurants__bas__gauche">
                         <h2>La note enchantée</h2>
-                        <p>Charonne</p>
+                        <p>Charonee</p>
                     </div>
                     <div class="restaurants__bas__coeur">
                         <p><i class="far fa-heart"></i></p>
@@ -135,11 +138,18 @@
                 </div>
 
             </div>
+
+
+
+
             <div class="restaurants__card">
                 <div><img src="img/restaurants/a_la_francaise.jpg" alt="assiette du restaurant À la francaise"
                         title="restaurant à la française">
 
                 </div>
+
+
+
                 <div class="restaurants__bas">
 
                     <div class="restaurants__bas__gauche">
