--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 </div>
 
             </div>
-            <div class="restaurants__card">
-                <div class="restaurants__card__image">
+            <div class="restaurants__card" class=img>
+                <div class="restaurants__card__image2">
                     <div><img src="img/restaurants/la_note_enchantee.jpg" alt="assiette du restaurant la note enchanté"
                             title="restaurant la note enchantée">
 
@@ -190,7 +190,7 @@
 
     </main>
     <footer>
-        <h1>ohmyfood</h1>
+        <h1 class="roboto--font">ohmyfood</h1>
         <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
         <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
         <p>Mentions légales</p>
