le haerder du menu plus rajout 3 titre h2 du main+ rajout du bouton commander

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -21,27 +21,23 @@
 <body>
     <header>
         <div class="logo"><img src="/img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food"></div>
-        <div class="miheader">
-            <p><i class="fas fa-map-marker-alt"></i> Paris , Belleville</p>
-        </div>
-        <div class="baheader">
-            <h1>Réservez le menu qui <br />vous convient</h1>
-            <p>Découvrez des restaurants d'exception,<br />
-                séléctionnés par nos soins.</p>
 
+
+        <div class="header__img--box"><img class="header__img--menu" src="../img/restaurants/la_palette_du_gout.jpg"
+                alt="assiette du restaurant la palette du goût" title="restaurant la palette du goût a Ménilmontant">
+            <h1 class="header__titre roboto--font">la palette du goût <i class="far fa-heart"></i></h1>
         </div>
+
     </header>
     <main>
-        <div class="fonctionnement">
-            <h1>Fonctionnement</h1>
-        </div>
-        <div class="restaurants">
-            <h1>Restaurants</h1>
-        </div>
-        <div class="btn-commander">
-            <h2>Commander/h2>
+        <h2>ENTRES</h2>
+        <h2>PLATS</h2>
+        <h2>DESSERTS</h2>
+        <div class="header__bas__btn ">
+            <h2>Commander</h2>
         </div>
     </main>
+
     <footer>
         <h1>ohmyfood</h1>
         <p><i class=" fas fa-utensils"></i> Proposer un restaurant</p>
