relglage sur le steel sheetpour les menu et reglage class roboto--font

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -9,6 +9,8 @@
     <!--pour voir les raison de sait 3 ligne https://www.alsacreations.com/astuce/lire/1437-comment-interdire-le-mode-de-compatibilite-sur-ie.html-->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../public/css/style.css" type="text/css">
+
+
     <title>La palette du goût</title>
     <script src="https://kit.fontawesome.com/3261bc58c2.js" crossorigin="anonymous"></script>
     <!--apelle de la bibliotheque Font Awesome.-->
@@ -23,9 +25,11 @@
         <div class="logo"><img src="/img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food"></div>
 
 
-        <div class="header__img--box"><img class="header__img--menu" src="../img/restaurants/la_palette_du_gout.jpg"
-                alt="assiette du restaurant la palette du goût" title="restaurant la palette du goût a Ménilmontant">
+        <div class="header__img--box" roboto--font><img class="header__img--menu"
+                src="../img/restaurants/la_palette_du_gout.jpg" alt="assiette du restaurant la palette du goût"
+                title="restaurant la palette du goût a Ménilmontant">
             <h1 class="header__titre roboto--font">la palette du goût <i class="far fa-heart"></i></h1>
+
         </div>
 
     </header>
@@ -39,7 +43,7 @@
     </main>
 
     <footer>
-        <h1>ohmyfood</h1>
+        <h1 class="roboto--font">ohmyfood</h1>
         <p><i class=" fas fa-utensils"></i> Proposer un restaurant</p>
         <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
         <p>Mentions légales</p>
