--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -22,7 +22,12 @@
 
 <body>
     <header>
-        <div class="logo"><img src="/img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food"></div>
+        <div class="hautmenu">
+            <i class="fas fa-arrow-left"></i>
+            <h1 class="roboto--font">ohmyfood</h1>
+        </div>
+
+
 
 
         <div class="header__img--box" roboto--font><img class="header__img--menu"
