rajout des appelle police dans le menu la palette du gout

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -9,11 +9,18 @@
     <!--pour voir les raison de sait 3 ligne https://www.alsacreations.com/astuce/lire/1437-comment-interdire-le-mode-de-compatibilite-sur-ie.html-->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../public/css/style.css" type="text/css">
-
-
     <title>La palette du goût</title>
     <script src="https://kit.fontawesome.com/3261bc58c2.js" crossorigin="anonymous"></script>
     <!--apelle de la bibliotheque Font Awesome.-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+    <!--appelle pour m'es 2 polices-->
+
+
+
+
+
+
 
 
 
