--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -46,9 +46,49 @@
 
     </header>
     <main>
-        <h2>ENTRES</h2>
+        <h2>ENTRÉES</h2>
+        <span class="carrevert"></span>
+        <div class="plat__card">
+            <h2>Fricassée d'escargot</h2>
+            <p>Au pimet D'espelette <span>25€</span></p>
+        </div>
+        <div class="plat__card">
+            <h2>Foie gras de canard mi-cuit</h2>
+            <p>Et ses copeaux de truffe noire<span>35€</span></p>
+        </div>
+        <div class="plat__card">
+            <h2>Oeuf au plat</h2>
+            <p>Assaisonné à la truffe sur lit de....<span>20€</span></p>
+        </div>
         <h2>PLATS</h2>
+        <span class="carrevert"></span>
+        <div class="plat__card">
+            <h2>Filet de boeuf aux herbes</h2>
+            <p>Accompagné de sa ribambelle de légu...<span>40€</span></p>
+        </div>
+        <div class="plat__card">
+            <h2>Parmentier de queue de boeuf</h2>
+            <p>À la truffe noir sur sa purée de panais <span>35€</span></p>
+        </div>
+        <div class="plat__card">
+            <h2>Filet de Turbot</h2>
+            <p>Aux agrumes</p>
+        </div>
         <h2>DESSERTS</h2>
+        <span class="carrevert"></span>
+        <div class="plat__card">
+            <h2>Paris-Brest</h2>
+            <p>Revisté <span>18€</span></p>
+        </div>
+        <div class="plat__card">
+            <h2>Macaron au chocolat d'exption</h2>
+            <p>Et glace à la vanille de Madagascar<span>22€</span></p>
+        </div>
+        <div class="plat__card">
+            <h2>Mousse au chocolat</h2>
+            <p>Au piment d'espelette et à la truffe noire<span>23€</span></p>
+        </div>
+
         <div class="header__bas__btn ">
             <h2>Commander</h2>
         </div>
