centrage cadrage au millieu des card fonctionnement dans index et reglage des card menu

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -37,56 +37,56 @@
 
 
 
-        <div class="header__img--box" roboto--font><img class="header__img--menu"
+        <div class="header__img--box  roboto--font"><img class="header__img--menu" class='main__menu'
                 src="../img/restaurants/la_palette_du_gout.jpg" alt="assiette du restaurant la palette du goût"
                 title="restaurant la palette du goût a Ménilmontant">
-            <h1 class="header__titre roboto--font">la palette du goût <i class="far fa-heart"></i></h1>
+            <h1 class="header__titre roboto--font" >la palette du goût <i class="far fa-heart"></i></h1>
 
         </div>
 
     </header>
-    <main>
-        <h2>ENTRÉES</h2>
+    <main class='main__menu'>
+        <h2 class="espace__gauche_titre_H2">ENTRÉES</h2>
         <span class="carrevert"></span>
         <div class="plat__card">
             <h2>Fricassée d'escargot</h2>
-            <p>Au pimet D'espelette <span>25€</span></p>
+            <p> <span class="point" class="overflow-ellipsis">Au pimet D'espelette</span> <span class="main__menu__argent">25€</span></p>
         </div>
         <div class="plat__card">
             <h2>Foie gras de canard mi-cuit</h2>
-            <p>Et ses copeaux de truffe noire<span>35€</span></p>
+            <p class="point" class="overflow-ellipsis">Et ses copeaux de truffe noire <span class="main__menu__argent">35€</span></p>
         </div>
         <div class="plat__card">
             <h2>Oeuf au plat</h2>
-            <p>Assaisonné à la truffe sur lit de....<span>20€</span></p>
+            <p class="point" class="overflow-ellipsis">Assaisonné à la truffe sur lit de caviar <span class="main__menu__argent">20€</span></p>
         </div>
-        <h2>PLATS</h2>
+        <h2 class="espace__gauche_titre_H2">PLATS</h2>
         <span class="carrevert"></span>
         <div class="plat__card">
             <h2>Filet de boeuf aux herbes</h2>
-            <p>Accompagné de sa ribambelle de légu...<span>40€</span></p>
+            <p class="point" class="overflow-ellipsis">Accompagné de sa ribambelle de légumes <span class="main__menu__argent">40€</span></p>
         </div>
         <div class="plat__card">
             <h2>Parmentier de queue de boeuf</h2>
-            <p>À la truffe noir sur sa purée de panais <span>35€</span></p>
+            <p class="point"  class="overflow-ellipsis">À la truffe noir sur sa purée de panais <span class="main__menu__argent">35€</span></p>
         </div>
         <div class="plat__card">
             <h2>Filet de Turbot</h2>
-            <p>Aux agrumes</p>
+            <p class="point" class="overflow-ellipsis">Aux agrumes <span class="main__menu__argent">44€</span></p>
         </div>
-        <h2>DESSERTS</h2>
+        <h2 class="espace__gauche_titre_H2">DESSERTS</h2>
         <span class="carrevert"></span>
         <div class="plat__card">
             <h2>Paris-Brest</h2>
-            <p>Revisté <span>18€</span></p>
+            <p class="point" class="overflow-ellipsis">Revisté <span class="main__menu__argent">18€</span></p>
         </div>
         <div class="plat__card">
             <h2>Macaron au chocolat d'exption</h2>
-            <p>Et glace à la vanille de Madagascar<span>22€</span></p>
+            <p class="point" class="overflow-ellipsis">Et glace à la vanille de Madagascar <span class="main__menu__argent">22€</span></p>
         </div>
         <div class="plat__card">
             <h2>Mousse au chocolat</h2>
-            <p>Au piment d'espelette et à la truffe noire<span>23€</span></p>
+            <p class="point" class="overflow-ellipsis">Au piment d'espelette et à la truffe noire <span class="main__menu__argent">23€</span></p>
         </div>
 
         <div class="header__bas__btn ">
