rajout de la class restaurants__card__nouveau__texte

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                     </div>
                     <div class="restaurants__card__nouveau">
-                        <div class="">
+                        <div class="restaurants__card__nouveau__texte">
                             <p>Nouveau</p>
                             <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
                         </div>
