rajout de lien pour la premier card de index et debut de reglage des ... dans les menu

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h1>Restaurants</h1>
 
 
-            <div class="restaurants__card">
+            <a href="menu/la_palette_du_gout.html"><div class="restaurants__card">
                 <div class="restaurants__card__image">
                     <div><img src="img/restaurants/la_palette_du_gout.jpg"
                             alt="assiette du restaurant la palette du goût"
@@ -109,7 +109,7 @@
 
                 </div>
 
-            </div>
+            </div></a>
             <div class="restaurants__card" class=img>
                 <div class="restaurants__card__image2">
                     <div><img src="img/restaurants/la_note_enchantee.jpg" alt="assiette du restaurant la note enchanté"
