--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -50,7 +50,10 @@
         <span class="carrevert"></span>
         <div class="plat__card">
             <h2>Fricassée d'escargot</h2>
-            <p> <span class="point" class="overflow-ellipsis">Au pimet D'espelette</span> <span class="main__menu__argent">25€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">Au pimet D'espelette</p></div>
+                <div class="main__menu__argent"><p>25€</p></div>
+            </div>
         </div>
         <div class="plat__card">
             <h2>Foie gras de canard mi-cuit</h2>
