--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -48,48 +48,77 @@
     <main class='main__menu'>
         <h2 class="espace__gauche_titre_H2">ENTRÉES</h2>
         <span class="carrevert"></span>
+
         <div class="plat__card">
             <h2>Fricassée d'escargot</h2>
             <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">Au pimet D'espelette</p></div>
+                <div class="point" ><p class="overflow-ellipsis">Au pimet D'espelette </p></div>
                 <div class="main__menu__argent"><p>25€</p></div>
             </div>
         </div>
+
+
         <div class="plat__card">
             <h2>Foie gras de canard mi-cuit</h2>
-            <p class="point" class="overflow-ellipsis">Et ses copeaux de truffe noire <span class="main__menu__argent">35€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">Et ses copeaux de truffe noire </p></div>
+                <div class="main__menu__argent"><p>35€</p></div>
+            </div>
         </div>
+
         <div class="plat__card">
             <h2>Oeuf au plat</h2>
-            <p class="point" class="overflow-ellipsis">Assaisonné à la truffe sur lit de caviar <span class="main__menu__argent">20€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">Assaisonné à la truffe sur lit de caviar </p></div>
+                <div class="main__menu__argent"><p>20€</p></div>
+            </div>
         </div>
         <h2 class="espace__gauche_titre_H2">PLATS</h2>
         <span class="carrevert"></span>
+
         <div class="plat__card">
             <h2>Filet de boeuf aux herbes</h2>
-            <p class="point" class="overflow-ellipsis">Accompagné de sa ribambelle de légumes <span class="main__menu__argent">40€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">Accompagné de sa ribambelle de légumes </p></div>
+                <div class="main__menu__argent"><p>40€<</p></div>
+            </div>
         </div>
         <div class="plat__card">
             <h2>Parmentier de queue de boeuf</h2>
-            <p class="point"  class="overflow-ellipsis">À la truffe noir sur sa purée de panais <span class="main__menu__argent">35€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">À la truffe noir sur sa purée de panais </p></div>
+                <div class="main__menu__argent"><p>35€</p></div>
+            </div>
         </div>
         <div class="plat__card">
             <h2>Filet de Turbot</h2>
-            <p class="point" class="overflow-ellipsis">Aux agrumes <span class="main__menu__argent">44€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">Aux agrumes </p></div>
+                <div class="main__menu__argent"><p>44€</p></div>
+            </div>
         </div>
         <h2 class="espace__gauche_titre_H2">DESSERTS</h2>
         <span class="carrevert"></span>
         <div class="plat__card">
             <h2>Paris-Brest</h2>
-            <p class="point" class="overflow-ellipsis">Revisté <span class="main__menu__argent">18€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">Revisté </p></div>
+                <div class="main__menu__argent"><p>18€</p></div>
+            </div>
         </div>
         <div class="plat__card">
             <h2>Macaron au chocolat d'exption</h2>
-            <p class="point" class="overflow-ellipsis">Et glace à la vanille de Madagascar <span class="main__menu__argent">22€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">Et glace à la vanille de Madagascar </p></div>
+                <div class="main__menu__argent"><p>22€</p></div>
+            </div>
         </div>
         <div class="plat__card">
             <h2>Mousse au chocolat</h2>
-            <p class="point" class="overflow-ellipsis">Au piment d'espelette et à la truffe noire <span class="main__menu__argent">23€</span></p>
+            <div class="plat__card__p">
+                <div class="point" ><p class="overflow-ellipsis">Au piment d'espelette et à la truffe noire </p></div>
+                <div class="main__menu__argent"><p>23€</p></div>
+            </div>
         </div>
 
         <div class="header__bas__btn ">
