majusculoe a Explorer nos restaurants

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Découvrez des restaurants d'exception,<br />
                 séléctionnés par nos soins.</p>
             <div class="header__bas__btn ">
-                <h2>explorer nos restaurants</h2>
+                <h2>Explorer nos restaurants</h2>
             </div>
         </div>
     </header>
