lien retour pour le logo fleche  de la palette du gout

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <div class="hautmenu">
-            <i class="fas fa-arrow-left"></i>
+            <a href="../"><i class="fas fa-arrow-left"></i></a>
             <h1 class="roboto--font">ohmyfood</h1>
         </div>
 
