rajout des ... pour les H2 des entre  , plats et dessets

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -50,7 +50,12 @@
         <span class="carrevert"></span>
 
         <div class="plat__card">
-            <h2>Fricassée d'escargot</h2>
+
+
+            <div class="plat__card__p">
+                <div class="point2" ><h2 class="overflow-ellipsis">Fricassée d'escargot</h2></div>
+                </div>
+
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">Au pimet D'espelette </p></div>
                 <div class="main__menu__argent"><p>25€</p></div>
@@ -59,7 +64,13 @@
 
 
         <div class="plat__card">
-            <h2>Foie gras de canard mi-cuit</h2>
+ 
+
+            <div class="plat__card__p">
+                <div class="point2" ><h2 class="overflow-ellipsis">Foie gras de canard mi-cuit</h2></div>
+                </div>
+
+
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">Et ses copeaux de truffe noire </p></div>
                 <div class="main__menu__argent"><p>35€</p></div>
@@ -67,7 +78,11 @@
         </div>
 
         <div class="plat__card">
-            <h2>Oeuf au plat</h2>
+         
+            <div class="plat__card__p">
+                <div class="point2" ><h2 class="overflow-ellipsis">Oeuf au plat</h2></div>
+                </div>
+
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">Assaisonné à la truffe sur lit de caviar </p></div>
                 <div class="main__menu__argent"><p>20€</p></div>
@@ -77,21 +92,38 @@
         <span class="carrevert"></span>
 
         <div class="plat__card">
-            <h2>Filet de boeuf aux herbes</h2>
+
+
+            <div class="plat__card__p">
+                <div class="point2" ><h2 class="overflow-ellipsis">Filet de boeuf aux herbes</h2></div>
+                </div>
+
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">Accompagné de sa ribambelle de légumes </p></div>
                 <div class="main__menu__argent"><p>40€<</p></div>
             </div>
         </div>
         <div class="plat__card">
-            <h2>Parmentier de queue de boeuf</h2>
+ 
+
+            <div class="plat__card__p">
+                <div class="point2" ><h2 class="overflow-ellipsis">Parmentier de queue de boeuf</h2></div>
+                </div>
+
+
+    
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">À la truffe noir sur sa purée de panais </p></div>
                 <div class="main__menu__argent"><p>35€</p></div>
             </div>
         </div>
         <div class="plat__card">
-            <h2>Filet de Turbot</h2>
+ 
+
+            <div class="plat__card__p">
+                <div class="point2" ><h2 class="overflow-ellipsis">Filet de Turbot</h2></div>
+                </div>
+
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">Aux agrumes </p></div>
                 <div class="main__menu__argent"><p>44€</p></div>
@@ -100,21 +132,36 @@
         <h2 class="espace__gauche_titre_H2">DESSERTS</h2>
         <span class="carrevert"></span>
         <div class="plat__card">
-            <h2>Paris-Brest</h2>
+
+
+
+
+            <div class="plat__card__p">
+                <div class="point2" ><h2 class="overflow-ellipsis">Paris-brest</h2></div>
+                </div>
+
+
+
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">Revisté </p></div>
                 <div class="main__menu__argent"><p>18€</p></div>
             </div>
         </div>
         <div class="plat__card">
-            <h2>Macaron au chocolat d'exption</h2>
             <div class="plat__card__p">
+
+            <div class="point2" ><h2 class="overflow-ellipsis">Macaron au chocolat d'exeption</h2></div>
+            </div>
+            <div class="plat__card__p">                
                 <div class="point" ><p class="overflow-ellipsis">Et glace à la vanille de Madagascar </p></div>
                 <div class="main__menu__argent"><p>22€</p></div>
             </div>
         </div>
+
         <div class="plat__card">
-            <h2>Mousse au chocolat</h2>
+            <div class="plat__card__p">
+            <div class="point2" ><h2 class="overflow-ellipsis">Mousse au chocolat</h2></div>
+        </div>
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">Au piment d'espelette et à la truffe noire </p></div>
                 <div class="main__menu__argent"><p>23€</p></div>
