travail sur .Fonctionnement__btn . mais pas finis car trops fatigue pour teste

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div><i class="fas fa-mobile-alt"></i></div>
                 <div>
-                    <p> Choisissez un restaurant</p>
+                    <p class="Fonctionnement__btn__p"> Choisissez un restaurant</p>
                 </div>
 
 
