--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/logo/ohmyfood@2x.svg" alt="logo du site" title="oh my food"></div>
+        <div class="hautmenu">
+  
+            <h1 class="roboto--font">ohmyfood</h1>
+        </div>
+
         <div class="header__milieu">
             <p><i class="fas fa-map-marker-alt"></i> Paris , Belleville</p>
         </div>
