essaie sur animation de la pallette du gout

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -51,15 +51,21 @@
 
         <div class="plat__card">
 
-
-            <div class="plat__card__p">
-                <div class="point2" ><h2 class="overflow-ellipsis">Fricassée d'escargot</h2></div>
+            <div class="colonne">
+                <div class="plat__card__p">
+                    <div class="point2" ><h2 class="overflow-ellipsis">Fricassée d'escargot</h2></div>
                 </div>
 
-            <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">Au pimet D'espelette </p></div>
-                <div class="main__menu__argent"><p>25€</p></div>
+                <div class="plat__card__p">
+                    <div class="point" ><p class="overflow-ellipsis">Au pimet D'espelette </p></div>
+                    <div class="main__menu__argent"><p>25€</p></div>
+                </div>
             </div>
+            <div class="animation__essai">
+               
+                
+            </div>
+
         </div>
 
 
@@ -100,7 +106,7 @@
 
             <div class="plat__card__p">
                 <div class="point" ><p class="overflow-ellipsis">Accompagné de sa ribambelle de légumes </p></div>
-                <div class="main__menu__argent"><p>40€<</p></div>
+                <div class="main__menu__argent"><p>40€</p></div>
             </div>
         </div>
         <div class="plat__card">
