debut animation menu

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -58,12 +58,14 @@
 
                 <div class="plat__card__p">
                     <div class="point" ><p class="overflow-ellipsis">Au pimet D'espelette </p></div>
-                    <div class="main__menu__argent"><p>25€</p></div>
+                    <div class="main__menu__argent"><p>25€ </p></div>
                 </div>
             </div>
-            <div class="animation__essai">
+            <div class="box">
+                <i class="fas fa-check-circle-rotate-180"></i>
                
-                
+
+  
             </div>
 
         </div>
