ligne de rajjout check

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -62,9 +62,9 @@
                 </div>
             </div>
             <div class="box">
-                <i class="fas fa-check-circle-rotate-180"></i>
                
-
+                
+                        <p><i class="fas fa-100em check-circle fa-rotate-45deg"></i></p>
   
             </div>
 
