--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -1,225 +1,246 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <![endif]-->
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <![endif]-->
     <!--pour voir les raison de sait 3 ligne https://www.alsacreations.com/astuce/lire/1437-comment-interdire-le-mode-de-compatibilite-sur-ie.html-->
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="../public/css/style.css" type="text/css">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../public/css/style.css" type="text/css" />
     <title>La palette du goût</title>
-    <script src="https://kit.fontawesome.com/3261bc58c2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/3261bc58c2.js"
+      crossorigin="anonymous"
+    ></script>
     <!--apelle de la bibliotheque Font Awesome.-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <!--appelle pour m'es 2 polices-->
+  </head>
 
-
-
-
-
-
-
-
-
-
-</head>
-
-<body>
+  <body>
     <header>
-        <div class="hautmenu">
-            <a href="../"><i class="fas fa-arrow-left"></i></a>
-            <h1 class="roboto--font">ohmyfood</h1>
-        </div>
+      <div class="hautmenu">
+        <a href="../"><i class="fas fa-arrow-left"></i></a>
+        <h1 class="roboto--font">ohmyfood</h1>
+      </div>
 
-
-
-
-        <div class="header__img--box  roboto--font"><img class="header__img--menu" class='main__menu'
-                src="../img/restaurants/la_palette_du_gout.jpg" alt="assiette du restaurant la palette du goût"
-                title="restaurant la palette du goût a Ménilmontant">
-            <h1 class="header__titre roboto--font" >la palette du goût <i class="far fa-heart"></i></h1>
-
-        </div>
-
+      <div class="header__img--box roboto--font">
+        <img
+          class="header__img--menu"
+          class="main__menu"
+          src="../img/restaurants/la_palette_du_gout.jpg"
+          alt="assiette du restaurant la palette du goût"
+          title="restaurant la palette du goût a Ménilmontant"
+        />
+        <h1 class="header__titre roboto--font">
+          la palette du goût <i class="far fa-heart"></i>
+        </h1>
+      </div>
     </header>
-    <main class='main__menu'>
-        <h2 class="espace__gauche_titre_H2">ENTRÉES</h2>
-        <span class="carrevert"></span>
+    <main class="main__menu">
+      <h2 class="espace__gauche_titre_H2">ENTRÉES</h2>
+      <span class="carrevert"></span>
 
-        <div class="plat__card">
-            <div class="colonne">
-                <div class="plat__card__p">
-                    <div class="point2" ><h2 class="overflow-ellipsis">Fricassée d'escargot</h2></div>
-                </div>
-                <div class="plat__card__p">
-                    <div class="point" ><p class="overflow-ellipsis">Au pimet D'espelette </p></div>
-                    <div class="main__menu__argent"><p>25€ </p></div>
-                </div>
-            </div>
-            <div class="box">                            
-                <i class="fas fa-check-circle"></i> 
-            </div>
-        </div>
-
-
-        <div class="plat__card">
-            <div class="colonne">
-            <div class="plat__card__p">
-                <div class="point2" ><h2 class="overflow-ellipsis">Foie gras de canard mi-cuit</h2></div>
-                </div>
-            <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">Et ses copeaux de truffe noire </p></div>
-                <div class="main__menu__argent"><p>35€</p></div>
-            </div>
-            </div>
-            <div class="box">                            
-                <i class="fas fa-check-circle"></i> 
-            </div>
-        </div>
-
-        <div class="plat__card">
-            <div class="colonne">
-         
-            <div class="plat__card__p">
-                <div class="point2" ><h2 class="overflow-ellipsis">Oeuf au plat</h2></div>
-                </div>
-
-            <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">Assaisonné à la truffe sur lit de caviar </p></div>
-                <div class="main__menu__argent"><p>20€</p></div>
-            </div>
-        </div>
-        <div class="box">                            
-            <i class="fas fa-check-circle"></i> 
-        </div>
-        </div>
-        <h2 class="espace__gauche_titre_H2">PLATS</h2>
-        <span class="carrevert"></span>
-
-        <div class="plat__card">
+      <div class="plat__card">
         <div class="colonne">
-
-
-            <div class="plat__card__p">
-                <div class="point2" ><h2 class="overflow-ellipsis">Filet de boeuf aux herbes</h2></div>
-                </div>
-
-            <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">Accompagné de sa ribambelle de légumes </p></div>
-                <div class="main__menu__argent"><p>40€</p></div>
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Fricassée d'escargot</h2>
             </div>
-        </div>
-        <div class="box">                            
-            <i class="fas fa-check-circle"></i> 
-        </div>
-        </div>
-        <div class="plat__card">
-            <div class="colonne">
- 
-
-            <div class="plat__card__p">
-                <div class="point2" ><h2 class="overflow-ellipsis">Parmentier de queue de boeuf</h2></div>
-                </div>
-
-
-    
-            <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">À la truffe noir sur sa purée de panais </p></div>
-                <div class="main__menu__argent"><p>35€</p></div>
+          </div>
+          <div class="plat__card__p">
+            <div class="point">
+              <p class="overflow-ellipsis">Au pimet D'espelette</p>
             </div>
+            <div class="main__menu__argent"><p>25€</p></div>
+          </div>
         </div>
-        <div class="box">                            
-            <i class="fas fa-check-circle"></i> 
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
         </div>
-        </div>
-        <div class="plat__card">
-            <div class="colonne">
- 
+      </div>
 
-            <div class="plat__card__p">
-                <div class="point2" ><h2 class="overflow-ellipsis">Filet de Turbot</h2></div>
-                </div>
-
-            <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">Aux agrumes </p></div>
-                <div class="main__menu__argent"><p>44€</p></div>
+      <div class="plat__card">
+        <div class="colonne">
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Foie gras de canard mi-cuit</h2>
             </div>
-
-        </div>
-        <div class="box">                            
-            <i class="fas fa-check-circle"></i> 
-        </div>
-    </div>
-        <h2 class="espace__gauche_titre_H2">DESSERTS</h2>
-        <span class="carrevert"></span>
-        <div class="plat__card">
-            <div class="colonne">
-
-
-
-
-            <div class="plat__card__p">
-                <div class="point2" ><h2 class="overflow-ellipsis">Paris-brest</h2></div>
-                </div>
-
-
-
-            <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">Revisté </p></div>
-                <div class="main__menu__argent"><p>18€</p></div>
+          </div>
+          <div class="plat__card__p">
+            <div class="point">
+              <p class="overflow-ellipsis">Et ses copeaux de truffe noire</p>
             </div>
+            <div class="main__menu__argent"><p>35€</p></div>
+          </div>
         </div>
-        <div class="box">                            
-            <i class="fas fa-check-circle"></i> 
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
         </div>
-        </div>
-        <div class="plat__card">
-            <div class="colonne">
-            <div class="plat__card__p">
+      </div>
 
-            <div class="point2" ><h2 class="overflow-ellipsis">Macaron au chocolat d'exeption</h2></div>
+      <div class="plat__card">
+        <div class="colonne">
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Oeuf au plat</h2>
             </div>
-            <div class="plat__card__p">                
-                <div class="point" ><p class="overflow-ellipsis">Et glace à la vanille de Madagascar </p></div>
-                <div class="main__menu__argent"><p>22€</p></div>
-            </div>
-        </div>
-        <div class="box">                            
-            <i class="fas fa-check-circle"></i> 
-        </div>
-    </div>
+          </div>
 
-        <div class="plat__card">
-            <div class="colonne">
-            <div class="plat__card__p">
-            <div class="point2" ><h2 class="overflow-ellipsis">Mousse au chocolat</h2></div>
-        </div>
-            <div class="plat__card__p">
-                <div class="point" ><p class="overflow-ellipsis">Au piment d'espelette et à la truffe noire </p></div>
-                <div class="main__menu__argent"><p>23€</p></div>
+          <div class="plat__card__p">
+            <div class="point">
+              <p class="overflow-ellipsis">
+                Assaisonné à la truffe sur lit de caviar
+              </p>
             </div>
+            <div class="main__menu__argent"><p>20€</p></div>
+          </div>
         </div>
-        <div class="box">                            
-            <i class="fas fa-check-circle"></i> 
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
         </div>
-    </div>
+      </div>
+      <h2 class="espace__gauche_titre_H2">PLATS</h2>
+      <span class="carrevert"></span>
 
-        <div class="header__bas__btn ">
-            <h2>Commander</h2>
+      <div class="plat__card">
+        <div class="colonne">
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Filet de boeuf aux herbes</h2>
+            </div>
+          </div>
+
+          <div class="plat__card__p">
+            <div class="point">
+              <p class="overflow-ellipsis">
+                Accompagné de sa ribambelle de légumes
+              </p>
+            </div>
+            <div class="main__menu__argent"><p>40€</p></div>
+          </div>
         </div>
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
+      <div class="plat__card">
+        <div class="colonne">
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Parmentier de queue de boeuf</h2>
+            </div>
+          </div>
+
+          <div class="plat__card__p">
+            <div class="point">
+              <p class="overflow-ellipsis">
+                À la truffe noir sur sa purée de panais
+              </p>
+            </div>
+            <div class="main__menu__argent"><p>35€</p></div>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
+      <div class="plat__card">
+        <div class="colonne">
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Filet de Turbot</h2>
+            </div>
+          </div>
+
+          <div class="plat__card__p">
+            <div class="point">
+              <p class="overflow-ellipsis">Aux agrumes</p>
+            </div>
+            <div class="main__menu__argent"><p>44€</p></div>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
+      <h2 class="espace__gauche_titre_H2">DESSERTS</h2>
+      <span class="carrevert"></span>
+      <div class="plat__card">
+        <div class="colonne">
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Paris-brest</h2>
+            </div>
+          </div>
+
+          <div class="plat__card__p">
+            <div class="point"><p class="overflow-ellipsis">Revisté</p></div>
+            <div class="main__menu__argent"><p>18€</p></div>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
+      <div class="plat__card">
+        <div class="colonne">
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Macaron au chocolat d'exeption</h2>
+            </div>
+          </div>
+          <div class="plat__card__p">
+            <div class="point">
+              <p class="overflow-ellipsis">
+                Et glace à la vanille de Madagascar
+              </p>
+            </div>
+            <div class="main__menu__argent"><p>22€</p></div>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
+
+      <div class="plat__card">
+        <div class="colonne">
+          <div class="plat__card__p">
+            <div class="point2">
+              <h2 class="overflow-ellipsis">Mousse au chocolat</h2>
+            </div>
+          </div>
+          <div class="plat__card__p">
+            <div class="point">
+              <p class="overflow-ellipsis">
+                Au piment d'espelette et à la truffe noire
+              </p>
+            </div>
+            <div class="main__menu__argent"><p>23€</p></div>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
+
+      <div class="header__bas__btn">
+        <h2>Commander</h2>
+      </div>
     </main>
 
     <footer>
-        <h1 class="roboto--font">ohmyfood</h1>
-        <p><i class=" fas fa-utensils"></i> Proposer un restaurant</p>
-        <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p><a href="mailto:Contact@ohmyfood.com">Contact</a></p>
+      <h1 class="roboto--font">ohmyfood</h1>
+      <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
+      <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
+      <p>Mentions légales</p>
+      <p><a href="mailto:Contact@ohmyfood.com">Contact</a></p>
     </footer>
-
-</body>
-
+  </body>
 </html>
